@startuml
title Class Diagram - Mô hình miền nghiệp vụ CinemaBooking
hide methods
skinparam shadowing false
skinparam classAttributeIconSize 0
class User {
  UUID id
  String username
  String email
  Boolean emailVerified
  Integer authVersion
  Boolean isActive
  Boolean isDeleted
}
class Role {
  UUID id
  String name
}
class Permission {
  UUID id
  String name
}
class StaffCinema {
  UUID staffId
  UUID cinemaId
}
class Movie {
  UUID id
  String title
  Integer duration
  MovieStatus status
  Boolean isDeleted
}
class Cinema {
  UUID id
  String name
  String city
  Double latitude
  Double longitude
  Boolean isActive
}
class Room {
  UUID id
  String name
  Boolean isDeleted
}
class Seat {
  UUID id
  String rowLabel
  Integer seatNumber
  SeatType seatType
  BigDecimal priceMultiplier
}
class Showtime {
  UUID id
  LocalDateTime startTime
  LocalDateTime endTime
  BigDecimal basePrice
  ShowtimeStatus status
}
class SeatStatus {
  UUID id
  SeatStatusType status
  LocalDateTime holdUntil
  Integer version
}
class Booking {
  UUID id
  BigDecimal totalPrice
  BigDecimal discountAmount
  BookingStatus status
  String secureToken
  LocalDateTime paymentExpiresAt
}
class BookingDetail {
  UUID id
  BigDecimal priceAtBooking
}
class Payment {
  UUID id
  BigDecimal amount
  PaymentMethod method
  PaymentStatus status
  String transactionNo
}
class PaymentEvent {
  UUID id
  PaymentEventType eventType
  Boolean success
  LocalDateTime createdAt
}
class Refund {
  UUID id
  BigDecimal amount
  RefundStatus status
  String reason
  LocalDateTime requestedAt
}
class Ticket {
  UUID id
  String qrCode
  TicketStatus status
  LocalDateTime checkInTime
}
class RefreshToken {
  UUID id
  String tokenHash
  LocalDateTime expiresAt
  LocalDateTime revokedAt
}
class InvalidatedToken {
  String id
  LocalDateTime expiryTime
}
class AuthAuditLog {
  UUID id
  String eventType
  Boolean success
  LocalDateTime createdAt
}
class AdminAuditLog {
  UUID id
  String action
  String resourceType
  Boolean success
  LocalDateTime createdAt
}
User "*" -- "*" Role : users_roles
Role "*" -- "*" Permission : roles_permissions
User "1" -- "*" StaffCinema
Cinema "1" -- "*" StaffCinema
Cinema "1" -- "*" Room
Room "1" -- "*" Seat
Movie "1" -- "*" Showtime
Room "1" -- "*" Showtime
Showtime "1" -- "*" SeatStatus
Seat "1" -- "*" SeatStatus
User "1" -- "*" Booking
Showtime "1" -- "*" Booking
Booking "1" -- "*" BookingDetail
Seat "1" -- "*" BookingDetail
BookingDetail "1" -- "0..1" Ticket
Booking "1" -- "*" Payment
Payment "1" -- "*" PaymentEvent
Booking "1" -- "*" PaymentEvent
Payment "1" -- "*" Refund
Booking "1" -- "*" Refund
User "1" -- "*" RefreshToken
User "1" -- "*" AuthAuditLog
User "0..1" -- "*" AdminAuditLog : actor
@enduml
